Join CDL parameter before passing it

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -907,7 +907,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !GetAtt Constants.RootStackName
-        SharedResourceSharePrincipals: !Ref SharedResourceSharePrincipals
+        SharedResourceSharePrincipals: !Join [",", !Ref SharedResourceSharePrincipals]
         VPCPrivateSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VPCPrivateSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VPCPrivateSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
