Use CDL parameter directly

--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -21,7 +21,7 @@ Resources:
     Properties:
       AllowExternalPrincipals: false
       Name: !Sub ${RootStackName}_shared
-      Principals: !Split [",", !Ref SharedResourceSharePrincipals]
+      Principals: !Ref SharedResourceSharePrincipals
       ResourceArns:
         - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet1}
         - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet2}
