--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -13,6 +13,7 @@ Parameters:
   AvailabilityZoneSelectorServiceToken: { Type: String }
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
+  RootStackId: { Type: String }
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
 
@@ -38,6 +39,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
   IPv6VpcCidrBlock:
@@ -60,6 +63,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
   DhcpOptionsAssociation:
@@ -77,11 +82,14 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-network-acl.yml
@@ -95,6 +103,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
@@ -102,6 +111,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/private-network-acl.yml
@@ -117,6 +128,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
@@ -126,6 +138,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-subnets.yml
@@ -139,6 +153,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
@@ -148,6 +163,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/private-subnets.yml
@@ -162,6 +179,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
         PublicSubnet1Id: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
         PublicSubnet2Id: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
@@ -170,6 +188,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/interface-endpoints.yml
@@ -187,6 +207,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/gateway-endpoints.yml
@@ -202,10 +224,13 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
         RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${TemplateUrlPrefix}/flow-logs.yml
