--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -7,6 +7,7 @@ Description: >-
 Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
+  RootStackId: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   VPCPrivateSubnet1: { Type: "AWS::EC2::Subnet::Id" }
   VPCPrivateSubnet2: { Type: "AWS::EC2::Subnet::Id" }
@@ -30,5 +31,7 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
