--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -7,6 +7,7 @@ Parameters:
   EnvironmentType: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   RootStackName: { Type: String }
+  RootStackId: { Type: String }
 
 Conditions:
   IsEnabled: !Equals [Enabled, Enabled] # TODO
@@ -45,6 +46,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
   FlowLog:
@@ -61,6 +64,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TrafficType: ALL
