--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -8,6 +8,7 @@ Description: >-
 Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
+  RootStackId: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
 
 Resources:
@@ -20,6 +21,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
 
