--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -9,7 +9,7 @@ Mappings:
       name: play-express
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
-  CreateProductionResources: !Equals [!Ref EnvironmentType, Staging]
+  CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -205,7 +205,7 @@ Resources:
 
   ProxyPathListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Condition: CreateProductionResources
+    Condition: CreateStagingResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref ProxyTargetGroup
