--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -218,7 +218,7 @@ Resources:
         - Field: path-pattern
           Values:
             - /proxy*
-      ListenerArn: !Ref AlbHttpsListenerArn
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "20"]]
 
   ProxyTargetGroup:
